se agrego form.php form.html formController y modifico la rutes.yaml

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <body>
     <h1>Bienvenido a Mi Sitio Web</h1>
-    <p>Este es un mensaje de bienvenida.</p>
+    <p>proyecto de Symfony listar productos</p>
     <p><a href="{{ path('product_list') }}">Ver lista de productos</a></p>
 </body>
 {% endblock %}
